--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Domain Verification Dogfooding</title>
-
+<meta name="facebook-domain-verification" content="7yllgxi50eh6j2pd4uxa9z5c3zn2tz" />
 </head>
 <body>
 <h1>Now entering the land of Domain verification</h1>
